tests/NormalTests/paczka1/fuzzy1/73119066.err
Error in line 1: F9nI9z A832 43,3
Error in line 8: 2TZY S575 22,6
Error in line 10: 2TZY S258 26,5
Error in line 16: 2TZY A656 9,7
Error in line 19: 2TZY S258 7,8
Error in line 24: 2TZY S575 35,9
Error in line 29: rqOBDkW6 A656 83,0
